@@ -1,6 +1,16 @@
 git (1:1.8.2-0.1) experimental; urgency=low
 
   * new upstream release (see RelNotes/1.8.2.txt).
+  * add a git-bzr package with bzr remote helper (closes: #702697).
+    * debian/control: new package git-bzr; Priority: extra; Depends:
+      python, python-bzrlib; Conflicts: bzr-git; package git now
+      Suggests and git-all Recommends: git-bzr.
+    * debian/git-remote-bzr.txt: new; explain usage.
+    * debian/rules: process debian/git-remote-bzr.txt with git's
+      documentation toolchain and install to /usr/share/man/man1/;
+      munge contrib/remote-helpers/git-remote-bzr shebang line and
+      install to /usr/lib/git-core.
+    * debian/git-doc.docs: install git-remote-bzr.html.
   * debian/control: Standards-Version: 3.9.4.0.
   * debian/rules: define %.install depending on install-arch or
     install-indep as appropriate for each package.
